I will give users the ability to login so I have dumped a few of the php and controllers in from project 2. I have also updated the general template to remove the carousel and added a new class for wrapping all content to make up for the nav bar settings.

--- a/css/footer.css
+++ b/css/footer.css
@@ -238,45 +238,6 @@
 
     }
 
-      /* Sticky footer styles
-      -------------------------------------------------- */
-
-      html,
-      body {
-        height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
-
-      /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #push,
-      #footer {
-        height: 60px;
-      }
-      #footer {
-        background-color: #f2f2f2;
-
-      }
-
-      /* Lastly, apply responsive CSS fixes as necessary */
-      @media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
-        }
-      }
-
-
 
       /* Custom page CSS
       -------------------------------------------------- */
@@ -299,3 +260,18 @@
         font-size: 80%;
       }
 
+      footer {
+      	background-color: #f2f2f2;
+      	display: block;
+      	padding: 30px;
+
+      }
+
+
+      /*because of the navbar all views need to be wrapped in this*/
+      #wrap 
+      {
+      	margin-top:120px;
+      	margin-bottom: 50px;
+
+      }
