--- a/css/footer.css
+++ b/css/footer.css
@@ -263,8 +263,11 @@
       footer {
       	background-color: #f2f2f2;
       	display: block;
-      	padding: 30px;
-
+      	padding-top: 15px;
+      	padding-bottom: 10px;
+      	padding-left: 10px;
+      	margin: 15px;
+      	max-width: 
       }
 
 
@@ -273,5 +276,11 @@
       {
       	margin-top:120px;
       	margin-bottom: 50px;
+      	margin-left: 10px;
 
+      }
+
+      .product {
+      	margin:10px;
+      	padding: 10px;
       }
