--- a/css/footer.css
+++ b/css/footer.css
@@ -60,6 +60,8 @@
     /* Carousel base class */
     .carousel {
       margin-bottom: 60px;
+       
+
     }
 
     .carousel .container {
@@ -84,7 +86,6 @@
       position: absolute;
       top: 0;
       left: 0;
-      min-width: 100%;
       height: 500px;
     }
 
@@ -274,9 +275,9 @@
       /*because of the navbar all views need to be wrapped in this*/
       #wrap 
       {
-      	margin-top:120px;
-      	margin-bottom: 50px;
-      	margin-left: 10px;
+      	margin-top:100px;
+      	margin-bottom: 30px;
+      	
 
       }
 
@@ -285,3 +286,217 @@
       	padding: 10px;
       }
       
+@media screen {
+
+/*-------------------------------------------------------------------------------------------------
+input css
+-------------------------------------------------------------------------------------------------*/
+
+  /* Right column */
+  h4 {
+    display: inline-block;
+  }
+
+  
+  #invoice {
+    text-align:left;
+    border: solid #000000 thin;
+    background: #f2f2f2;
+    padding:15px;
+    margin-top: 20px;
+    font-size: 14pt;
+  }
+
+
+
+  #nameOut {
+    border: solid #f2f2f2 thin;
+    margin: 5px;
+    padding: 10px;
+    height: 75px;
+    
+  }
+
+  #contactInfo {
+    border: solid #f2f2f2 thin;
+    margin: 5px;
+    padding: 10px;
+    height: 75px;
+    
+  }
+
+  #purchaserName {
+    padding-bottom: 10px;
+    padding-left: 5px;
+      
+    font-variant: small-caps;
+  }
+
+  #purchaserInfo {  
+    padding-bottom: 10px; 
+    font-variant: small-caps;
+    font-size: 14pt;
+    text-align: right;
+  }
+
+  #total {
+
+    text-align: right;
+
+  }
+
+  #quantityError {
+    color: #FF0000;
+
+  }
+
+  #link {
+    display: block;
+    margin: 5px;
+    padding:10px;
+    font-size: 18pt;
+    color: #86CD86;
+  }
+
+  #signup {
+    padding: 25px;
+    width:100%;
+  }
+
+  .length {
+    color: #FF0000;
+    margin: 0px;
+    padding-bottom: 10px;
+    font-size: 14pt;
+
+  }
+  .total {
+    font-variant: small-caps;
+    font-size: 14pt;
+    text-align: right;
+    
+
+  }
+  .invoiceGoods {
+    font-variant: small-caps;
+    font-size: 14pt;
+    padding-left: 25px;
+
+
+    }
+  .invoiceQuantity {
+    float: right; 
+    font-variant: small-caps;
+    font-size: 14pt;
+    text-align: right;
+    width: 200px;
+  }
+
+  .bakedGood {
+    color: #0033FF ;
+  }
+
+
+  .error {
+    color: #FF0000;
+    margin: 0px;
+    padding-bottom: 10px;
+    font-size: 14pt;
+  }
+
+  .requiredinput {
+    display: inline;
+    color: #FF0000;
+    font-size: 18pt;
+  }
+
+  .inline{
+    display: inline;
+    font-size: 14pt;
+  }
+
+
+}
+
+
+
+@media print {
+
+  header nav, footer, p {
+    display: none;
+  }
+
+  #left-side, #print, #removeInvoiceLines, #button {
+    display: none;
+  }
+
+  #invoice {  
+    text-align:left;
+    background: #f2f2f2;
+    padding:15px;
+    margin: 20px;
+  }
+
+  #nameOut {
+    margin: 5px;
+    padding: 10px;
+    height: 75px;
+    font-variant: normal;
+  }
+
+  #contactInfo {
+    margin: 5px;
+    padding: 10px;
+    height: 75px;
+    font-variant: normal;
+  }
+
+  #purchaserName {
+    padding-bottom: 10px;
+      font-size: 14pt;
+    font-variant: small-caps;
+  }
+
+  #purchaserInfo {
+
+    padding-bottom: 10px; 
+    font-variant: small-caps;
+    font-size: 14pt;
+    
+  }
+
+  #total {
+    text-align: right;
+    display: block;
+    bottom: 0;
+
+  }
+
+  .total {
+    text-align: right;
+    
+
+  }
+  
+  .invoiceGoods {
+    width: 200px;
+    display: inline;
+    float:left;
+    font-variant: small-caps;
+    font-size: 14pt;
+    margin: 15px;
+    padding:10px;
+  }
+
+  .invoiceQuantity {
+    width: 100px;
+    float:right;
+    font-variant: small-caps;
+    font-size: 14pt;
+    text-align: right;
+
+  }
+
+}
+
+
