--- a/css/footer.css
+++ b/css/footer.css
@@ -500,3 +500,61 @@ input css
 }
 
 
+
+/*Shawna's additional css */
+
+.signup {
+  display: inline-block;
+  background-color: #f2f2f2;
+  padding-right:20px;
+
+}
+
+.signup h2 {
+  padding-left:15px;
+  padding-top:10px;
+
+}
+
+.login {
+  display: inline-block;
+  
+}
+
+.login h2 {
+  padding-left:15px;
+  padding-top:10px;
+}
+
+.follow {
+ font-size: 20px;
+ display: block;
+ padding-bottom: 5px;
+
+}
+
+.avatar {
+  width:100px;
+  height:100px;
+
+}
+
+.post {
+  border: solid thin #f2f2f2;
+  margin-bottom: 10px;
+  padding:8px;
+  background-color: #f2f2f2;
+}
+
+.profile {
+  padding-left:15px;
+  padding-top:10px;
+  border: solid thin #f2f2f2;
+}
+
+#orderhistory {
+  padding-left: 25px;
+  display: block;
+  
+  
+}
