--- a/css/footer.css
+++ b/css/footer.css
@@ -504,9 +504,10 @@ input css
 /*Shawna's additional css */
 
 .signup {
-  display: inline-block;
+  
   background-color: #f2f2f2;
   padding-right:20px;
+  padding-left: 40px;
 
 }
 
